# immich-lib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: manual-release.yml  publish.yml  python-package.yml
src/immich_lib/: base.py  cli.py  client.py
src/immich_lib/api/: albums.py  assets.py  misc.py  partners.py  people.py  search.py  stacks.py  system.py  tags.py  trash.py  users.py
tests/: test_assets.py  test_folders.py  test_immich_tool.py  test_misc.py  test_partners.py  test_people.py  test_search.py  test_stacks.py  test_tags.py  test_trash.py  test_users.py
