[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immich-lib"
version = "0.1.0"
description = "A Python library and CLI tool for interacting with Immich"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "python-dotenv",
    "tqdm"
]
authors = [
    {name = "guanana"}
]

[project.scripts]
immich-tool = "immich_lib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
